# bpf

./: README.md
metal/: Cargo.toml  README.md  justfile
metal/.vim/: coc-settings.json
metal/metal/: Cargo.toml
metal/metal-common/: Cargo.toml
metal/metal-common/src/: lib.rs
metal/metal-ebpf/: Cargo.toml
metal/metal-ebpf/src/: main.rs  util.rs
metal/metal/src/: main.rs
metal/xtask/: Cargo.toml
metal/xtask/src/: build_ebpf.rs  codegen.rs  run.rs
skeng/: Cargo.toml  README.md  justfile
skeng/skeng/: Cargo.toml
skeng/skeng-common/: Cargo.toml
skeng/skeng-common/src/: lib.rs
skeng/skeng-ebpf/: Cargo.toml
skeng/skeng-ebpf/src/: bindings.rs  main.rs
skeng/skeng/src/: main.rs
skeng/xtask/src/: build_ebpf.rs  codegen.rs  main.rs  run.rs
