[package]
name = "skeng"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main", features = ["async_tokio"] }
skeng-common = { path = "../skeng-common", features=["user"] }
anyhow = "1.0.42"
bytes = "1"

log = "0.4"
simplelog = "0.11"
structopt = { version = "0.3" }
tokio = { version = "1.9.0", features = ["full"] }

[[bin]]
name = "skeng"
path = "src/main.rs"
